--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <h2 id="buttons-options">Options</h2>
             <p>Use any of the available button classes to quickly create a styled button.</p>
             <div class="bs-example" data-example-id="btn-variants">
-                <buttons />
+                <buttons>
             </div>
         </div>
 
     </div>
 
-    <script src="//riotjs.dev/dist/riot.js"></script>
+    <script src="//cdn.jsdelivr.net/riot/2.0.5/riot.js"></script>
     <script src="assets/js/tags.min.js"></script>
     <script>riot.mount('buttons')</script>
 
