--- a/tests/each/fail-buttons-fail-three.html
+++ b/tests/each/fail-buttons-fail-three.html
@@ -28,7 +28,7 @@
     </div>
 
     <script src="//cdn.jsdelivr.net/riot/2.0.5/riot.js"></script>
-    <script src="/assets/js/tags.min.js"></script>
+    <script src="../../assets/js/tags.min.js"></script>
     <script>riot.mount('*')</script>
 
     <script src="//localhost:35729/livereload.js"></script>
