--- a/tests/each/ok-buttons-good.html
+++ b/tests/each/ok-buttons-good.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//getbootstrap.com/assets/css/docs.min.css">
-    <link rel="stylesheet" href="assets/css/style.min.css"/>
+    <link rel="stylesheet" href="../../assets/css/style.min.css"/>
     <!--[if lt IE 9]>
-    <script src="assets/js/libs/html5shiv-printshiv.js"></script>
+    <script src="../../assets/js/libs/html5shiv-printshiv.js"></script>
     <![endif]-->
 </head>
 
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <script src="//cdn.jsdelivr.net/riot/2.0.7/riot.js"></script>
+    <script src="//cdn.jsdelivr.net/riot/2.0.8/riot.js"></script>
     <script src="../../assets/js/tags.min.js"></script>
     <script>riot.mount('*')</script>
 
